Revision history for Perl extension Mojo-Feed

{{$NEXT}}

0.19 2020-06-16T12:03:17Z

    - Made is_valid and feed_type attributes of Mojo::Feed
    - Exposed Mojo::Feed utility methods find_feed_links() and 
      is_feed_content_type()

0.18 2019-07-07T13:56:36Z

    - Bump required Mojolicious version to 8.03 just to use a weak attribute.
    - Allow Mojo::Feed to handle loading without help of Mojo::Feed::Reader,
      by setting *file* or *url* attributes (or set *body* directly to parse
      from a string).
    - Change license to Artistic 2.0 (previously I used the Minilla default,
      which is the same licenses as Perl 5, Artistic+GPL; this prevented the 
      license from showing up on github search).
    - 

0.17 2018-11-07T10:08:44Z

    - Make autodiscovery more liberal (get any url with containing the word "feed")
    - Added feed_type method to Mojo::Feed
    - Combine tagline attribute of Mojo::Feed with subtitle attribute
    - Rename html_url attribute of Mojo::Feed to link
    - Mojolicious v8.05 compatibility (thanks Slaven Rezić from CPANTesters)

0.16 2018-04-04T14:56:31Z

    - Added Mojo::Feed::is_valid() to assert object is an actual feed (Mario Domgoergen)
    - Change Mojo::Feed::Reader::parse() to return undef if feed is not valid

0.15 2018-04-03T03:54:50Z

    - Fix version string in plugin for PAUSE indexer

0.14 2018-04-02T21:10:45Z

    - Add backwards-compatible new version of Mojolicious::Plugin::FeedReader, using Mojo::Feed::Reader

0.13 2018-04-01T17:02:43Z

    - original version (Mojo::Feed, refactoring of Mojolicious::Plugin::FeedReader into standalone module)

Revision history for perl module Mojolicious::Plugin::FeedReader

0.12 2018-02-28

   - Add support for enclosures (Mario Domgoergen)

0.11 2018-02-26

   - Remove dependency on Mojolicious::Controller, allow direct use

0.10 2017-11-08

   - decode text before using Mojo::DOM (Uses either UTF-8 or charset from HTTP response)

0.09 2017-08-28
