@@ -2,6 +2,8 @@ Revision history for Perl extension Mojo-Feed
 
 {{$NEXT}}
 
+    - Added *entries* attribute as an alias for *items*
+
 0.19 2020-06-16T12:03:17Z
 
     - Made is_valid and feed_type attributes of Mojo::Feed
